Bug 380287 - Breadcrumb drop-down items are sometimes accidentally activated
Summary: Breadcrumb drop-down items are sometimes accidentally activated
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-28 20:25 UTC by Алексей Шилин
Modified: 2018-02-23 17:43 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.44
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Алексей Шилин 2017-05-28 20:25:51 UTC
Dear developers,

Breadcrumb drop-down items get unexpectedly activated when the list is big enough.

Steps to reproduce:

 1. Open Dolphin and navigate to /usr/share/doc/dolphin/.
 2. Move Dolphin window to right-bottom screen corner.
 3. Open doc's breadcrumb.

Expected result:

 * Current directory remains /usr/share/doc/dolphin.

Actual result:

 * Current directory changes to some other doc's subfolder.

I guess, drop-down list placement is what causes the issue: when it's big enough to not fit vertically (i.e. when Dolphin's window is small and is at the bottom of the screen, and there are a lot of items in the drop-down), it is moved up, and as a result becomes under mouse pointer, catches e.g. LMB Release event and changes current directory to whichever happens to be under mouse pointer.
Comment 1 Nate Graham 2018-02-23 16:57:03 UTC
Can confirm the issue with KDE Frameworks 5.43.

Didn't you submit a patch for this? If so, can you drop the link in a comment here? Shame Bugzilla and Phabricator aren't linked up in that way..
Comment 2 Алексей Шилин 2018-02-23 17:14:06 UTC
(In reply to Nate Graham from comment #1)
> Didn't you submit a patch for this?

I did. You've even tested it. :)

I originally (incorrectly) reported the bug against Dolphin, and now I just reassigned it to KIO so that FIXED-IN tag works.
Comment 3 Nate Graham 2018-02-23 17:25:29 UTC
No wonder this bug report it seemed so familiar! :)
Comment 4 Алексей Шилин 2018-02-23 17:43:06 UTC
Git commit 4a6a3b81bedca043bbe2c620cea296f9f69e5eea by Алексей Шилин.
Committed on 23/02/2018 at 17:42.
Pushed by aleksejshilin into branch 'master'.

Fix unintentional breadcrumb menu item activation

Summary:
Since breadcrumb menu is opened on mouse press, it may receive
the corresponding mouse release event which may unintentionally
activate the random item which happens to be under mouse pointer.

This commit makes the menu ignore the first mouse release event
unless the pointer was moved. It fixes the issue and still allows
'Press mouse button' -> 'Move to an item' -> 'Release the button'
usage scenario.
FIXED-IN: 5.44

Reviewers: #frameworks, dfaure

Reviewed By: dfaure

Subscribers: broulik, ngraham

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D8958

M  +30   -6    src/filewidgets/kurlnavigatormenu.cpp
M  +5    -0    src/filewidgets/kurlnavigatormenu_p.h

https://commits.kde.org/kio/4a6a3b81bedca043bbe2c620cea296f9f69e5eea